// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx > builds a package with JSX components 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rescript/react]",
  "      build.load_package_sources[package=@rewatch-test/with-jsx]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=10]",
  "    build.parse[dirty_modules=10]",
  "      build.parse_file[module=Greeting, package=@rewatch-test/with-jsx, jsx=4]",
  "      build.parse_file[module=React, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOM, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOMServer, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOMStatic, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOMStyle, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactEvent, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactEvent, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactTestUtils, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactTestUtils, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactErrorBoundary, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactErrorBoundary, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactRouter, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactRouter, package=@rescript/react, jsx=4]",
  "    build.compile",
  "      build.compile_wave[file_count=3]",
  "      build.compile_wave[file_count=6]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Greeting, package=@rewatch-test/with-jsx, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=React, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOM, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOMServer, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOMStatic, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOMStyle, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactEvent, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactTestUtils, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=RescriptReactErrorBoundary, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=RescriptReactRouter, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`jsx > includes jsx flags in parser args 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rescript/react]",
  "      build.load_package_sources[package=@rewatch-test/with-jsx]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=10]",
  "    build.parse[dirty_modules=10]",
  "      build.parse_file[module=Greeting, package=@rewatch-test/with-jsx, jsx=4]",
  "      build.parse_file[module=React, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOM, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOMServer, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOMStatic, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOMStyle, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactEvent, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactEvent, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactTestUtils, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactTestUtils, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactErrorBoundary, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactErrorBoundary, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactRouter, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactRouter, package=@rescript/react, jsx=4]",
  "    build.compile",
  "      build.compile_wave[file_count=3]",
  "      build.compile_wave[file_count=6]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Greeting, package=@rewatch-test/with-jsx, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=React, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOM, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOMServer, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOMStatic, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOMStyle, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactEvent, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactTestUtils, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=RescriptReactErrorBoundary, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=RescriptReactRouter, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "rewatch.compiler_args[file_path=src/Greeting.res]",
]
`;

exports[`jsx > includes jsx preserve flag when enabled 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rescript/react]",
  "      build.load_package_sources[package=@rewatch-test/with-jsx]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=10]",
  "    build.parse[dirty_modules=10]",
  "      build.parse_file[module=Greeting, package=@rewatch-test/with-jsx, jsx=4]",
  "      build.parse_file[module=React, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOM, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOMServer, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOMStatic, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactDOMStyle, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactEvent, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactEvent, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactTestUtils, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=ReactTestUtils, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactErrorBoundary, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactErrorBoundary, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactRouter, package=@rescript/react, jsx=4]",
  "      build.parse_file[module=RescriptReactRouter, package=@rescript/react, jsx=4]",
  "    build.compile",
  "      build.compile_wave[file_count=3]",
  "      build.compile_wave[file_count=6]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Greeting, package=@rewatch-test/with-jsx, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=React, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOM, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOMServer, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOMStatic, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactDOMStyle, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactEvent, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=ReactTestUtils, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=RescriptReactErrorBoundary, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "build.compile_file[module=RescriptReactRouter, package=@rescript/react, suffix=.mjs, module_system=esmodule]",
  "rewatch.compiler_args[file_path=src/Greeting.res]",
]
`;
